<resources>
    <string name="app_name">Qribbble</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_in">Login Your Dribble account</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_shots_detail" translatable="false">ShotsDetailActivity</string>
    <string name="success_login">Login successful! Loading User Data</string>

    <string name="main_home">Main Home</string>
    <string name="download_success">Download successfully!!</string>
    <string name="explore">Explore</string>
    <string name="my_profile">My Profile</string>
    <string name="my_favorite">My Favorite</string>
    <string name="my_following">My Following</string>
    <string name="fail_to_connect">Failed to connect to network</string>
    <string name="setting">Setting</string>
    <string name="query_hint">Search something</string>
    <string name="tap_to_login" translatable="false">Tap to Login</string>
    <string name="login_your_account">Login your Dribbble Account</string>
    <string name="notification_setting" translatable="false">notification_setting</string>
    <string name="notification_setting_time" translatable="false">notification_setting_time</string>
    <string name="clear_cache" translatable="false">clear_cache</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_search_result" translatable="false">SearchResultActivity</string>
    <string name="title_activity_user_detail" translatable="false">UserDetailActivity</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="create_shots">Create a shot</string>


</resources>
