<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/main_home" />
        <item
            android:id="@+id/explore"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/explore" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/my_profile"
            android:checkable="false"/>
        <item
            android:id="@+id/like"
            android:title="@string/my_favorite"
            android:icon="@drawable/ic_favorite_black_48dp"/>
        <item
            android:id="@+id/follow"
            android:title="@string/my_following"
            android:icon="@drawable/ic_stars_black_48dp"/>

    </group>

    <item android:title="About">
        <menu>

            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>
