<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="User">
        <Preference
            android:key="@string/login_in"
            android:title="Tap to Login"
            android:summary="Login your Dribbble Account"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="General Setting">
        <SwitchPreference
            android:key="@string/notification_setting"
            android:title="Enable Notification (beta)"
            />
        <ListPreference
            android:key="@string/notification_setting_time"
            android:title="Setting Notification Time (beta)"
            android:summary="set the time in terval to automatically send notifications"
            android:entries="@array/notification_time_array"
            android:entryValues="@array/notification_time_array"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Storage">
        <Preference
            android:key="@string/clear_cache"
            android:title="Clear Cache"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="About Me">
        <Preference
            android:title="stc3033"
            android:summary="Follow me on Sina Weibo"/>
    </PreferenceCategory>
</PreferenceScreen>